user permissions, userService and userController done, but missing revision